# RoboOpSuite

./: .gitignore  README.md  xmake.lua
RoboOp/: CMakeLists.txt  README.md  setup.py
RoboOp/include/common/: MotionProfile.h  Pid.h  Pose2d.h  calc.h  time.h
RoboOp/include/drive/: IDriveTrain.h  ILocalizer.h  IMotor.h  MotorGroup.h  PathFollower.h  TankDrive.h
RoboOp/include/pathing/: Spline.h  Trajectory.h  TrajectoryBuilder.h
RoboOp/src/common/: MotionProfile.cpp  Pid.cpp  Pose2d.cpp  time.cpp
RoboOp/src/drive/: MotorGroup.cpp  PathFollower.cpp  TankDrive.cpp
RoboOp/src/pathing/: Spline.cpp  Trajectory.cpp  TrajectoryBuilder.cpp
RoboOp/test_src/: test.cpp
RoboOpVisualizer/: CMakeLists.txt  README.md
RoboOpVisualizer/include/ui/tools/: Graph.h
RoboOpVisualizer/src/tools/: CodeGenerator.cpp  TrajectoryManager.cpp
RoboOpVisualizer/src/ui/: Window.cpp
RoboOpVisualizer/src/ui/tools/: Editor.cpp  Graph.cpp
